# Btree

./: CMakeLists.txt  README.md  main.c
BuscaBtree/: BuscaBtree.c  BuscaBtree.h
BuscaDireta/: BuscaDireta.c  BuscaDireta.h
CriarIndice/: CriarIndice.c  CriarIndice.h
Entradas/: entrada10mil.txt  entrada15mil.txt  entrada5mil.txt
Menu/: Menu.c  Menu.h
ProcurarElementos/: ProcurarElemento.c  ProcurarElemento.h
RemoverElemento/: RemoverElemento.c  RemoverElemento.h
